# kube-rs-rust-talk

./: 2025-02-20 Rust Talks Bern kube-rs.pptx  Cargo.toml  LICENSE  README.md  demo.tmux.sh
deployment-crud/: Cargo.toml
deployment-crud/src/: main.rs
pod-reflector/: Cargo.toml
pod-reflector/src/: main.rs
pod-watcher/: Cargo.toml
pod-watcher/src/: main.rs
talk/: README.md  kube-rs.typ
website/: Cargo.toml  website.yaml
website/src/: controller.rs  crdgen.rs  main.rs
