[package]
name = "deployment-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98.0"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
