[package]
name = "deployment-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = "4.0.0"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
