[package]
name = "pod-reflector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["derive", "runtime"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
