[package]
name = "pod-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
