[package]
name = "website"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "website"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "website"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
schemars = { version = "1.1.0", features = ["derive"] }
serde = "1.0.217"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
