[package]
name = "website"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "website"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "website"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.103"
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["derive", "runtime"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
